Added initial framework for building fct_dav.vad standalone

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-ChangeLog
-fct_dav.vad
-vad_dav.xml
-vad_fs.xml
-*.db
-*.trx
-*.tdb
-*.log
-*.pxa
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.status
+config.log
+configure
+install-sh
+missing
+
+*.vad
